--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Roboto">
 </head>
 <body>
+    <div class="topContent">
+        <img src="https://cdn.discordapp.com/avatars/444851276094767104/61502cefcdbe34a0cddbc3dcf52b13b0.webp?size=128" alt="">
+        <h1>Noan LISSILLOUR</h1>
+        <p>Développeur Junior</p>
+        <div class="discoverButton">
+            <p>Découvrir</p>
+        </div>
+    </div>
+    <div class="bottomContent">
+        <img src="imgs/earth-icon.svg" alt="">
+    </div>
     
 </body>
 </html>
