ajout de la terre qui tourne

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Roboto">
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.module.js",
+                "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161.0/examples/jsm/"
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="topContent">
+        <script type="module" src="main.js"></script>
         <img src="https://cdn.discordapp.com/avatars/444851276094767104/61502cefcdbe34a0cddbc3dcf52b13b0.webp?size=128" alt="">
         <h1>Noan LISSILLOUR</h1>
         <p>Développeur Junior</p>
